# clr-graylog-mcp

./: Dockerfile  README.md  pyproject.toml  run_server.py  test_cursor_integration.py  test_fixes.py  test_pydantic_fix.py
.github/workflows/: docker.yml  update-tools-reference.yml
examples/: basic_usage.py
mcp_graylog/: annotations.py  client.py  config.py  server.py  utils.py
tests/: test_annotations.py  test_client.py  test_config.py  test_utils.py
