[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clr-graylog-mcp"
version = "0.1.0"
description = "MCP server for Graylog log search and analysis"
authors = [{name = "Clearminds", email = "noc@clearminds.se"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0,<3",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
clr-graylog-mcp = "mcp_graylog.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_graylog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]